istio/serviceb/kubernetes-deployment.yml
#namespace for netpol-servicea
apiVersion: v1
kind: Namespace
metadata:
  name: netpol-demo
---
#kubernetes deployment for myservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netpol-serviceb
  namespace: netpol-demo
  labels:
    app: netpol-serviceb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netpol-serviceb
  template:
    metadata:
      labels:
        app: netpol-serviceb
    spec:
      containers:
        - name: netpol-serviceb
          image: myrgmyacr.azurecr.io/netpol-serviceb:latest
          imagePullPolicy: Always
          command: ["/bin/sh", "-c", "sleep 10000"]
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
           
---
# Path: kubernetes-service.yml
#kubernetes service for netpol-serviceb
apiVersion: v1
kind: Service
metadata:
  name: netpol-serviceb
  namespace: netpol-demo
  labels:
    app: netpol-serviceb
spec:
  ports:
    - port: 80
      targetPort: 8081
      name: http
  selector:
    app: netpol-serviceb

---
#Create istion virtual service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netpol-serviceb
  namespace: netpol-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /serviceb
            pathType: Prefix
            backend:
              service:
                name: netpol-serviceb
                port:
                  number: 80
